Implement self-hosted WiFi AP, USB serial and a few other custom tweaks

--- a/stage2-0/02-install-actioncam/files/smb.conf
+++ b/stage2-0/02-install-actioncam/files/smb.conf
@@ -257,7 +257,7 @@
 
 
 [share]
-Comment = Actioncam media folder
+Comment = ActionCAM media folder
 Path = /share
 Browseable = yes
 read only = no
