Add missing Wifi AP component, run actioncam service as user pi along with logging buffers and update Samba config to make files more easily accessible.

--- a/stage2-0/02-install-actioncam/files/actioncam.service
+++ b/stage2-0/02-install-actioncam/files/actioncam.service
@@ -2,6 +2,9 @@
 Description=Actioncam autostart service
 
 [Service]
+User=pi
+Group=pi
+Environment=PYTHONUNBUFFERED=1
 ExecStart=/usr/bin/actioncam
 StandardOutput=journal
 
