--- a/stage2-0/02-install-actioncam/files/smb.conf
+++ b/stage2-0/02-install-actioncam/files/smb.conf
@@ -88,7 +88,7 @@
 # Running as "active directory domain controller" will require first
 # running "samba-tool domain provision" to wipe databases and create a
 # new domain.
-   server role = standalone server
+#   server role = standalone server
 
 # If you are using encrypted passwords, Samba will need to know what
 # password database type you are using.  
@@ -116,8 +116,7 @@
 # to anonymous connections
    map to guest = bad user
 
-# Allow empty passwords for actioncam, disable this if your camera will be publically accessible
-   null passwords = yes
+   security = user
 
 ########## Domains ###########
 
@@ -185,6 +184,8 @@
 # public shares, not just authenticated ones
    usershare allow guests = yes
 
+   guest account = pi
+
 #======================= Share Definitions =======================
 
 [homes]
@@ -210,14 +211,6 @@
 # This might need tweaking when using external authentication schemes
    valid users = %S
 
-# Un-comment the following and create the netlogon directory for Domain Logons
-# (you need to configure Samba to act as a domain controller too.)
-;[netlogon]
-;   comment = Network Logon Service
-;   path = /home/samba/netlogon
-;   guest ok = yes
-;   read only = yes
-
 # Un-comment the following and create the profiles directory to store
 # users profiles (see the "logon path" option above)
 # (you need to configure Samba to act as a domain controller too.)
@@ -231,39 +224,15 @@
 ;   create mask = 0600
 ;   directory mask = 0700
 
-[printers]
-   comment = All Printers
-   browseable = no
-   path = /var/spool/samba
-   printable = yes
-   guest ok = no
-   read only = yes
-   create mask = 0700
-
-# Windows clients look for this share name as a source of downloadable
-# printer drivers
-[print$]
-   comment = Printer Drivers
-   path = /var/lib/samba/printers
-   browseable = yes
-   read only = yes
-   guest ok = no
-# Uncomment to allow remote administration of Windows print drivers.
-# You may need to replace 'lpadmin' with the name of the group your
-# admin users are members of.
-# Please note that you also need to set appropriate Unix permissions
-# to the drivers directory for these users to have write rights in it
-;   write list = root, @lpadmin
-
-
 [share]
 Comment = ActionCAM media folder
 Path = /share
-Browseable = yes
+browseable = yes
 read only = no
+writable = yes
 only guest = no
 create mask = 0777
 directory mask = 0777
-Public = yes
-Guest ok = yes
+public = yes
+guest ok = yes
 
